<resources>
    <string name="app_name">MMs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Welcome to MM\'s!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  Strings for Account  -->
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="no_thank_you">No thank you</string>
    <string name="submit">Submit</string>

    <string name="hello_sign_up">Hello! Do you wish to Sign Up?</string>
    <string name="welcome_user">"Mawieczo"</string>
    <string name="reset_password">Reset password</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="empty_star">Empty Star</string>
    <string name="first_login_text">Witamy w MMs! To twoje pierwsze logowanie. Możesz utworzyć przestrzeń lub wejść do przestrzeni. Jeśli nie wiesz, co chcesz zrobić przejrzyj nasz samouczek! Piona!</string>
    <string name="create_space_button">Create Space</string>
    <string name="enter_space_button">Enter Space</string>
    <string name="app_overview_button">App overview</string>
    <!--    dla boagadi-->

    <string name="user_name_hint">User name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter email address</string>
    <string name="repeat_password">Repeat password</string>
    <string name="agree_to_terms_amp_conditions"><![CDATA[Agree to Terms & Conditions]]></string>
    <string name="ready_to_login">Hello! Ready to login?</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
</resources>