<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready_to_login"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/login_bottom_margin"/>

    <EditText
        android:id="@+id/et_user_name"
        android:hint="@string/user_name"
        android:textColor="#6bfff7"
        android:textColorHint="#52afaa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/user_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:textColor="#6bfff7"
        android:textColorHint="#52afaa"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:layout_marginBottom="@dimen/login_bottom_margin"/>

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset_password"
        android:clickable="true"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center"/>
</LinearLayout>